<resources>
    <string name="app_name">3Ollin-Test</string>
    <string name="increase">Add a new Patient</string>
    <string name="edit_title">Updating</string>
    <string name="update_button">Update</string>
    <string name="edit">Updating</string>
    <string name="delete_button">Remove</string>
    <string name="update">Please, check that you are typing correct values.</string>
    <string name="updated">File updated.</string>
    <string name="validation">Please, check that you are typing correct values.</string>
    <string name="load_image">[ Change photo ]</string>
    <string name="confirmation">This task could not be restored. Do you want to continue?</string>
    <string name="select_picture">Select a picture</string>
    <string name="patient">Paciente</string>
    <string name="header_add_patient">Add a new Patient</string>
    <string name="submit_form">Submit</string>
    <string name="header_edit_patient">Edit patient</string>
    <string name="header_settings">Settings</string>
    <string name="test">Perform test</string>
    <string name="title_activity_navigation">Navigation Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="add_participant">Add new participant</string>
    <string name="patient_list">Patient list</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="button_finished">Finish</string>
    <string name="button_save">Save</string>
    <string name="activation_code">Activation code</string>
    <string name="header_about">About</string>
    <string name="header_privacy">Privacy terms</string>
    <string name="header_activation">Activation code</string>
    <string name="update_form">Update</string>
    <string name="update_data">[ Update ]</string>
    <string name="header_folder">Record</string>
    <string name="header_tests">Tests</string>
    <string name="header_control">Control measurements</string>
    <string name="header_edit_user_acount">Edit profile</string>
    <string name="material_icon_box_full">[0]</string>
    <string name="material_icon_check_empty">[-]</string>
    <string name="cd_main_image">main image</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="header_walking_tests">Walking test</string>
    <string name="header_wizard_tests">Overview for test</string>
    <string name="header_balance_test">Balance test options</string>
    <string name="button_start">Start</string>
    <string name="button_end">Stop</string>
    <string name="header_counter">Counter</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_restart">Resume</string>
    <string name="header_evaluation">Test evaluation</string>
    <string name="repeat_test">Repeat test</string>
    <string name="button_continue">Continue</string>
    <string name="header_faqs">FAQ\'s</string>
    <string name="walking_question_one">No abnormal gait</string>
    <string name="walking_question_two">Slow tentative pace</string>
    <string name="walking_question_three">Loss of balance</string>
    <string name="walking_question_four">En bloc turning</string>
    <string name="walking_question_five">Little or no arm swing</string>
    <string name="walking_question_six">Steadying self on walls</string>
    <string name="walking_question_seven">Shuffling</string>
    <string name="walking_question_eight">Short strides</string>
    <string name="walking_question_nine">Not using assistive device properly</string>
    <string name="strength_question_one">The OA finished the test without problems.</string>
    <string name="strength_question_two">The OA couldn\'t perform the test.</string>
    <string name="strength_question_three">The OA used his/her arms to stand.</string>
    <string name="balance_question_one">The OA finished the test without problems</string>
    <string name="balance_question_two">The OA could not perform the test</string>
    <string name="balance_question_three">The OA needed support</string>
    <string name="header_walkability_evaluation">Walkability test evaluation</string>
    <string name="button_repeat">Repeat test</string>
    <string name="header_balance_evaluation">Balance test evaluation</string>
    <string name="header_strength_evaluation">Strength test evaluation</string>
    <string name="button_quality">Mark quality of data</string>
    <string name="header_concentrated">Final report</string>
    <string name="button_finish_test">Finish test</string>
    <string name="request_password">Request</string>
    <string name="header_recover_password">Recover password</string>
    <string name="header_sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="project_name">3Ollin-Test</string>
    <string name="register">Sign Up</string>
    <string name="login">Log In</string>
    <string name="header_login">3Ollin-Test</string>
    <string name="app_version">Version</string>
    <string name="app_long_name">Application for Monitoring Physical Performance Tests: Gait, Strength, and Balance.</string>
    <string name="privacy_terms_tab">Privacy terms</string>
    <string name="activation_code_description">The activation code allow you to have the complete services of 3Ollin-Test, for instance, it gives you access to the information collected via online\n\nThe activation code distribution is limited to physicians and specialists who cooperate with the National Institute of Geriatrics of Mexico City.</string>
    <string name="button_next">Next</string>
    <string name="button_skip">Skip</string>
    <string name="patient_name_hint">Name</string>
    <string name="patient_surname_hint">Last name</string>
    <string name="patient_gender_hint">Gender</string>
    <string name="patient_birthday_hint">Date of birth</string>
    <string name="button_semi_tandem_test">Semi-tandem</string>
    <string name="button_tandem_test">Tandem</string>
    <string name="button_one_leg_test">One leg</string>
    <string name="label_register_number">Folio:</string>
    <string name="label_test_type">Test type:</string>
    <string name="label_quality">Data quality:</string>
    <string name="patient_weight_hint">Weight (kg)</string>
    <string name="patient_height_hint">Height (cm)</string>
    <string name="patient_waist_size_hint">Waist size (cm)</string>
    <string name="patient_heart_rate_hint">Heart rate (bpm)</string>
    <string name="patient_sys_blood_hint">Systolic blood pressure (mm Hg)</string>
    <string name="patient_dia_blood_hint">Diastolic blood pressure (mm Hg)</string>
    <string name="label_counting">3-2-1</string>
    <string name="user_passwords">Password</string>
    <string name="user_password_confirmation">Repeat Password</string>
    <string name="user_birthday_hint">Date of birth</string>
    <string name="user_gender_hint">Gender</string>
    <string name="user_surname_hint">Last name</string>
    <string name="user_name_hint">Name</string>
    <string name="button_control">Control</string>
    <string name="button_tests">Tests</string>
    <string name="label_update">Update:</string>
    <string name="label_weight">Weight:</string>
    <string name="label_height">Height:</string>
    <string name="label_waits_size">Waist size:</string>
    <string name="label_heart_rate">Heart rate:</string>
    <string name="label_sys_blood">Systolic blood pressure:</string>
    <string name="label_dia_blood">Diastolic blood pressure:</string>
    <string name="label_last_records">Last records</string>
    <string name="label_walking_test">TUG:</string>
    <string name="label_balance_test">Balance:</string>
    <string name="label_strength_test">Strength:</string>
    <string name="privacy_terms_content">The purpose of these Privacy Policies is to inform users about the use of their personal information to complete the application for registration at 3Ollin-Test. \n\nNote: We define personal information as the identifiable set of data, such as your name, address, e-mail address, and telephone number. \n\nA. USE OF INFORMATION. Personal information collected by consent of the user will be used as part of the patients\' electronic file for the monitoring of the risk of falls. This information may be used for statistical purposes by the organisation responsible for this application; respecting at all times the identity of the users. \n\nB. DISCLOSURE OF INFORMATION. The organization responsible for this application will not market or lease personal information of users of the system. They do not take advantage of the individual information provided. Only statistical information can be disclosed to third parties. \n\nC. SECURITY. In some modules of the application, the information is treated and stored in coded format to shell personal information. \n\nD. MODIFICATIONS IN PRIVACY POLICIES. The organisation responsible for this application reserves the right to make changes to the Privacy Policies, in order to adapt to new legislative requirements, jurisprudence, technicians and any other reason that allows to provide a better service to users. The organisation responsible for this application undertakes to disclose the modifications through this medium. \ n\nE. INTEGRITY. The Privacy Policies are an integral part of the Terms and Conditions of Use of the System. Consequently, the use of this application implies that users have read, understood and accepted the terms before being exposed. If the user does not agree with the Policies and/or the Terms of Use, the application can not be used.
</string>
    <string name="label_request_password">Request a new password by typing the E-mail you used to create you account:</string>
    <string name="label_email">Email</string>
    <string name="label_user">User</string>
    <string name="user_edit_account_tab">Edit account</string>
    <string name="user_activate_account_tab">Activate account</string>
    <string name="label_generals">Generals</string>
    <string name="about_tab">About</string>
    <string name="user_email_hint">E-mail</string>
    <string name="account_already_activated">This account has already been activated.</string>
    <string name="button_feet_together">Feet together</string>
    <string name="button_upload">Upload data</string>
    <string name="upload_description">Remaining files since:</string>
    <string name="remaining_data_date">No remaining data</string>
    <string name="about_description_button">Description</string>
    <string name="about_description">3Ollin-Test is an application developed by the National Institute of Geriatrics in Mexico.\n\nIn 2012, WHO reports that falls are the second world wide cause of death of the elderly population. The incidence of falls varies between countries, in average the 30-40 percent of the population of 65+ fall each year, but the rate increases as population age over 75+, where the incidence rises up to 45-50 percent.\n\nIn general, physical performance is a good indicator of risk in older adults. Thus, the goal of this application is to collect sensors data from a mobile device while patients perform a controlled physical test. Based on this data, we might construct algorithms to measure the risk of fall.</string>
    <string name="account_no_activated">The account is inactive. Please, refer to section ACTIVATE ACCOUNT for further information.</string>
    <string name="upload_description_fiware">Remaining file (fiware) since:</string>
</resources>