<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/manual_upload_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_description"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/remaining_data_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remaining_data_date"
        android:layout_below="@+id/manual_upload_description" />

    <TextView
        android:id="@+id/manual_upload_description_fiware"
        android:layout_below="@+id/remaining_data_date"
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_description_fiware"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/remaining_data_date_fiware"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remaining_data_date"
        android:layout_below="@+id/manual_upload_description_fiware" />

    <LinearLayout
        android:id="@+id/account_still_inactive_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:text="@string/account_no_activated"
            android:background="@color/material_blue_500"
            android:alpha="0.8"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:id="@+id/button_manual_upload"
                style="@style/OkButtonStyle"
                android:text="@string/button_upload" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
