<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/header_patient_photo"
                    style="@style/generalHeaderImageStyle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/header_patient_name"
                        style="@style/generalHeaderNameStyle"
                        tools:text="Patient name" />

                    <TextView
                        android:id="@+id/header_patient_age"
                        style="@style/generalHeaderAgeStyle"
                        tools:text="56 years old" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/control_weight"
                    style="@style/FormFieldsStyle"
                    android:hint="@string/patient_weight_hint"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/control_height"
                    style="@style/FormFieldsStyle"
                    android:hint="@string/patient_height_hint"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/control_waist"
                    style="@style/FormFieldsStyle"
                    android:hint="@string/patient_waist_size_hint"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/control_heart_rate"
                    style="@style/FormFieldsStyle"
                    android:hint="@string/patient_heart_rate_hint"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/control_blood_pressure_sis"
                    style="@style/FormFieldsStyle"
                    android:hint="@string/patient_sys_blood_hint"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/control_blood_pressure_dia"
                    style="@style/FormFieldsStyle"
                    android:hint="@string/patient_dia_blood_hint"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:layout_marginTop="12dp"
                android:gravity="right">

                <TextView
                    android:id="@+id/button_save_control_patient"
                    style="@style/OkButtonStyle"
                    android:text="@string/button_save" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>