<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activation_code_description"
        android:textAppearance="?android:textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/account_already_activated_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:text="@string/account_already_activated"
            android:background="@color/material_blue_500"
            android:alpha="0.8"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activation_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@string/activation_code" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/user_activation_code"
                style="@style/FormFieldsStyle"
                android:hint="@string/activation_code"
                android:password="true"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:id="@+id/button_activation_code"
                style="@style/OkButtonStyle"
                android:text="@string/submit_form" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
