<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/header_patient_photo"
                style="@style/generalHeaderImageStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/header_patient_name"
                    style="@style/generalHeaderNameStyle"
                    tools:text="Patient name" />

                <TextView
                    android:id="@+id/header_patient_age"
                    style="@style/generalHeaderAgeStyle"
                    tools:text="56 years old" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/counter_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="arial"
                android:gravity="center"
                android:text="@string/label_counting"
                android:textSize="90sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:orientation="horizontal">

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="arial"
                android:gravity="center"
                android:textSize="90sp"
                android:visibility="gone"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_cancel"
                style="@style/folderButtonStyle"
                android:text="@string/button_cancel" />

            <TextView
                android:id="@+id/button_restart_counter"
                style="@style/folderButtonStyle"
                android:text="@string/button_restart" />

            <View
                android:layout_width="8sp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/button_start_counter"
                style="@style/folderButtonStyle"
                android:text="@string/button_start" />

            <TextView
                android:id="@+id/button_stop_counter"
                style="@style/folderButtonStyle"
                android:background="@color/danger_button"
                android:text="@string/button_end" />

            <TextView
                android:id="@+id/button_finish"
                style="@style/folderButtonStyle"
                android:background="@color/danger_button"
                android:text="@string/button_finished" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>