<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/header_patient_photo"
                style="@style/generalHeaderImageStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/header_patient_name"
                    style="@style/generalHeaderNameStyle"
                    tools:text="Patient name" />

                <TextView
                    android:id="@+id/header_patient_age"
                    style="@style/generalHeaderAgeStyle"
                    tools:text="56 years old" />
            </LinearLayout>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/button_feet_together_option"
                style="@style/folderButtonStyle"
                android:text="@string/button_feet_together" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_margin="12dp" />

            <TextView
                android:id="@+id/button_semi_tandem_option"
                style="@style/folderButtonStyle"
                android:text="@string/button_semi_tandem_test" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_margin="12dp" />

            <TextView
                android:id="@+id/button_tandem_option"
                style="@style/folderButtonStyle"
                android:text="@string/button_tandem_test" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_margin="12dp" />

            <TextView
                android:id="@+id/button_one_leg_option"
                style="@style/folderButtonStyle"
                android:text="@string/button_one_leg_test" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_margin="12dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>